syntax = "proto3";

package tds.campaign;

service CampaignService {
  rpc GetCampaignFull(GetCampaignFullRequest) returns (GetCampaignFullResponse);
}

message GetCampaignFullResponse {
  Campaign campaign = 1;
}

message GetCampaignFullRequest {
  oneof _oneOf {
    string code = 1;
    string id = 2;
  }
}

message Campaign {
  string id = 1;
  string name = 2;
  repeated CampaignStream streams = 3;
}

message CampaignStream {
  string id = 1;
  string name = 2;
  StreamSchema schema = 3;
  StreamRedirectType redirectType = 4;
  string redirectUrl = 5;
  StreamActionType actionType = 6;
  string actionCampaignId = 7;
  string actionContent = 8;
  repeated StreamOffer streamOffers = 9;
}

message StreamOffer {
  string id = 1;
  string offerId = 2;
  uint32 percent = 3;
  bool active = 4;
}

enum StreamSchema {
  ACTION = 0;
  DIRECT_URL = 1;
  LANDINGS_OFFERS = 3;
}

enum StreamRedirectType {
  CURL = 0;
  FORM_SUBMIT = 1;
  HTTP = 2;
  IFRAME = 3;
  JS = 4;
  META = 5;
  META2 = 6;
  REMOTE = 7;
  WITHOUT_REFERER = 8;
}

enum StreamActionType {
  NOTHING = 0;
  SHOW404 = 1;
  SHOW_HTML = 2;
  SHOW_TEXT = 3;
  TO_CAMPAIGN = 4;
}
