syntax = "proto3";

package tds.offer;

service OfferService {
  rpc GetOfferList(GetOfferListRequest) returns (GetOfferListResponse);
}

message GetOfferListRequest {
  repeated string ids = 1;
}

message GetOfferListResponse {
  repeated Offer result = 1;
}

message Offer {
  string id = 1;
  string name = 2;
}
